--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,20 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@300;400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-G92H7HH7Q3"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-G92H7HH7Q3');
+		</script>
 
 		<title>Brendan McCauley | React.js Next.js Node.js Firebase</title>
 	</head>
