added paua demo

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@300;400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<!--DEMO FONTS--->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oxygen&display=swap"
+			rel="stylesheet"
+		/>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script
 			async
